# lean_rust

./: Cargo.toml  example.code-workspace
client/: Cargo.toml
client/src/: command_args.rs  main.rs  tcp.rs
com/: Cargo.toml
com/src/: lib.rs  request.rs  response.rs
packet/: Cargo.toml
packet/src/: lib.rs
request/: Cargo.toml
request/src/: lib.rs
response/: Cargo.toml
response/src/: lib.rs
server/: Cargo.toml
server/src/: commands.rs  main.rs  models.rs  repositories.rs  tcp.rs  tcp_server.rs
server/src/cqrs/: commands.rs  queries.rs
